force-app/main/default/objects/FieldHistory__c/FieldHistory__c.object-meta.xml
<CustomObject>
    <description>CATM</description>
    <label>Field History</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Field History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>