force-app/main/default/objects/FieldHistory__c/fields/Breach__c.field-meta.xml
<CustomField>
    <fullName>Breach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breach</label>
    <referenceTo>Breach__c</referenceTo>
    <relationshipLabel>Field Histories</relationshipLabel>
    <relationshipName>Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>