force-app/main/default/objects/FieldHistory__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Histories</relationshipLabel>
    <relationshipName>Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>