force-app/main/default/objects/FieldHistory__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>OldValue</label>
    <type>TextArea</type>
</CustomField>