force-app/main/default/objects/FieldHistory__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Field Histories</relationshipLabel>
    <relationshipName>Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>