force-app/main/default/objects/FieldHistory__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Field Histories</relationshipLabel>
    <relationshipName>Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>